genetic and tabu search algo

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "eades": "node --experimental-modules src/resultsEades.js",
     "fr": "node --experimental-modules src/resultsFruchtermanReingold.js",
     "sm": "node --experimental-modules src/resultsSM.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ts": "node --experimental-modules src/resultsTS.js",
+    "ga": "node --experimental-modules src/resultsGA.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "heuristics": "node --experimental-modules src/resultsSM.js && node --experimental-modules src/resultsTS.js "
   },
   "repository": {
     "type": "git",
